--- a/angular.json
+++ b/angular.json
@@ -17,7 +17,8 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/cockhero",
+            "outputPath": "./docs/",
+            "baseHref": "cockhero",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
@@ -66,7 +67,12 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "cockhero:build"
+            "disableHostCheck": true,
+            "browserTarget": "cockhero:build",
+            "servePath": "/cockhero/",
+            "baseHref": "/cockhero/",
+            "host": "0.0.0.0",
+            "port": 8080
           },
           "configurations": {
             "production": {
